update public folder

--- a/public/angular/index.html
+++ b/public/angular/index.html
@@ -15,5 +15,5 @@
 <link rel="stylesheet" href="styles.837cd117397db36303cf.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.1ef83d22ada557f4a131.js"></script><script type="text/javascript" src="main.8d2743a8678c0d25afb5.js"></script></body>
+<script type="text/javascript" src="angular/runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="angular/polyfills.1ef83d22ada557f4a131.js"></script><script type="text/javascript" src="angular/main.8d2743a8678c0d25afb5.js"></script></body>
 </html>
