--- a/public/angular/index.html
+++ b/public/angular/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Frontend</title>
-  <base href="/">
-  <!-- bootstrap -->
+  <base href="/angular/">  <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -12,8 +11,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.837cd117397db36303cf.css"></head>
+<link rel="stylesheet" href="styles.e04e8a2432e70f2bf8c0.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="angular/runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="angular/polyfills.1ef83d22ada557f4a131.js"></script><script type="text/javascript" src="angular/main.8d2743a8678c0d25afb5.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3bfd66addbd0d2814591.js"></script><script type="text/javascript" src="main.b5039ec53b561f030502.js"></script></body>
 </html>
