add weather app ui

--- a/frontend/react/public/index.html
+++ b/frontend/react/public/index.html
@@ -74,8 +74,15 @@
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="https://demos.creative-tim.com/material-dashboard/assets/js/material-dashboard.min.js?v=2.1.1"
     type="text/javascript"></script>
+
+  <!-- For Weather app only -->
+  <script src="./js/weather/skycons.js"></script>
+  <script src="./js/weather/easyResponsiveTabs.js"></script>
+  <!-- End -->
+
   <!-- for focus stylling of form and sidebar addition -->
   <!-- <script src="https://demos.creative-tim.com/material-dashboard/assets/js/core/bootstrap-material-design.min.js"></script> -->
+
 </body>
 
 </html>
