--- a/frontend/react/public/index.html
+++ b/frontend/react/public/index.html
@@ -76,8 +76,8 @@
     type="text/javascript"></script>
 
   <!-- For Weather app only -->
-  <script src="./js/weather/skycons.js"></script>
-  <script src="./js/weather/easyResponsiveTabs.js"></script>
+  <script src="/js/weather/skycons.js"></script>
+  <script src="/js/weather/easyResponsiveTabs.js"></script>
   <!-- End -->
 
   <!-- for focus stylling of form and sidebar addition -->
