--- a/frontend/react/public/index.html
+++ b/frontend/react/public/index.html
@@ -60,9 +60,8 @@
     -->
 
   <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->`
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -79,6 +78,7 @@
   <script src="/static/js/weather/skycons.js"></script>
   <script src="/static/js/weather/easyResponsiveTabs.js"></script>
   <!-- End -->
+
 
   <!-- for focus stylling of form and sidebar addition -->
   <!-- <script src="https://demos.creative-tim.com/material-dashboard/assets/js/core/bootstrap-material-design.min.js"></script> -->
