--- a/frontend/react/public/index.html
+++ b/frontend/react/public/index.html
@@ -77,6 +77,9 @@
   <script src="/static/js/weather/skycons.js"></script>
   <script src="/static/js/weather/easyResponsiveTabs.js"></script>
   <!-- End -->
+  <!-- API -->
+  <script src="/static/js/aqi/gauge.js"></script>
+  <!-- End -->
 
   <!-- for focus stylling of form and sidebar addition -->
   <!-- <script src="https://demos.creative-tim.com/material-dashboard/assets/js/core/bootstrap-material-design.min.js"></script> -->
