--- a/frontend/react/public/index.html
+++ b/frontend/react/public/index.html
@@ -81,6 +81,9 @@
   <script src="/static/js/aqi/gauge.js"></script>
   <!-- End -->
 
+  <!-- plotlyjs -->
+  <script src="https://cdn.plot.ly/plotly-1.2.0.min.js"></script>
+
   <!-- for focus stylling of form and sidebar addition -->
   <!-- <script src="https://demos.creative-tim.com/material-dashboard/assets/js/core/bootstrap-material-design.min.js"></script> -->
 
